--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,57 @@
 
 /* Your CSS Code here. */
+
+*{
+    padding: 0;
+    margin: 0;
+}
+body{
+    background-color: black;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 650px;
+    border: 3px solid red;
+    /* text-align: center; */
+    justify-content: center ;
+    align-items: center;
+    position: absolute;
+    top: 5%;
+    left: 40%;
+    background-color: greenyellow;
+}
+
+p{
+    text-align: center;
+}
+
+#gender{
+    margin-left: 3px;
+}
+
+input{
+    width: 150px;
+    height: 25px;
+}
+
+#male{
+    width: 10px;
+    height: 10px;
+
+}
+#female{
+    width: 10px;
+    height: 10px;
+
+}
+
+#btn{
+    width: 105px;
+    height: 50px;
+    text-align: center;
+    padding: 3px;
+}
