--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,23 @@
-
 /* Your CSS Code here. */
 
-*{
+* {
     padding: 0;
     margin: 0;
 }
-body{
+
+body {
     background-color: black;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
-.wrapper{
+.wrapper {
     display: flex;
     flex-direction: column;
     width: 300px;
     height: 650px;
     border: 3px solid red;
     /* text-align: center; */
-    justify-content: center ;
+    justify-content: center;
     align-items: center;
     position: absolute;
     top: 5%;
@@ -25,31 +25,30 @@ body{
     background-color: greenyellow;
 }
 
-p{
+p {
     text-align: center;
 }
 
-#gender{
+#gender {
     margin-left: 3px;
 }
 
-input{
+input {
     width: 150px;
     height: 25px;
 }
 
-#male{
+#male {
     width: 10px;
     height: 10px;
-
 }
-#female{
+
+#female {
     width: 10px;
     height: 10px;
-
 }
 
-#btn{
+#btn {
     width: 105px;
     height: 50px;
     text-align: center;
